tests/netconvert/errors/large_coordinates/net.netconvert
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on Mon Feb 17 15:31:11 2020 by Eclipse SUMO netconvert Version v1_5_0+0130-ceb0a01
This data file and the accompanying materials
are made available under the terms of the Eclipse Public License v2.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v20.html
SPDX-License-Identifier: EPL-2.0
<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/netconvertConfiguration.xsd">

    <input>
        <node-files value="input_nodes.nod.xml"/>
        <edge-files value="input_edges.edg.xml"/>
    </input>

    <output>
        <write-license value="true"/>
        <output-file value="net.net.xml"/>
    </output>

    <processing>
        <offset.disable-normalization value="true"/>
    </processing>

    <report>
        <xml-validation value="never"/>
        <aggregate-warnings value="5"/>
    </report>

</configuration>
-->

<net version="1.6" junctionCornerDetail="5" limitTurnSpeed="5.50" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/net_file.xsd">

    <location netOffset="0.00,0.00" convBoundary="1000000.00,0.00,1000010.00,0.00" origBoundary="1000000.00,0.00,1000010.00,0.00" projParameter="!"/>

    <edge id="0" from="0" to="1" priority="-1">
        <lane id="0_0" index="0" speed="13.89" length="10.00" shape="1000000.00,-1.60 1000010.00,-1.60"/>
    </edge>

    <junction id="0" type="dead_end" x="1000000.00" y="0.00" incLanes="" intLanes="" shape="1000000.00,0.00 1000000.00,-3.20"/>
    <junction id="1" type="dead_end" x="1000010.00" y="0.00" incLanes="0_0" intLanes="" shape="1000010.00,-3.20 1000010.00,0.00"/>

</net>
